<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Cadastro de Alunos UEZO</string>
    <string name="action_settings">Settings</string>
    <string name="title_section1">Cadastro</string>
    <string name="title_section2">Alunos Cadastrados</string>
    <string name="title_section3">Desenvolvedores</string>
    <string name="title_activity_cadastro">CadastroActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="cadNome">Nome:</string>
    <string name="cadEmail">Email:</string>
    <string name="cadEndereco">Endereço:</string>
    <string name="cadTel">Telefone:</string>
    <string name="btnCadastro">Cadastrar</string>
    <string name="title_activity_cadastro_fragment">CadastroFragment</string>

</resources>
